Add other changes from 5.x - 6.x

--- a/sass/_init.scss
+++ b/sass/_init.scss
@@ -95,10 +95,10 @@ $font-monospace:   $courier;
 //
 
 // The amount lists, blockquotes and comments are indented.
-$indent-amount: 5%;
+$indent-amount: 30px;
 
 // The height of the navigation container.
-$nav-height: 2em;
+$nav-height: 3em;
 
 // Tab styling.
 $tabs-container-bg: #fff;
