--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -30,7 +30,7 @@ $zen-auto-include-item-base: false;
  * For screen sizes larger than 1200px, prevent excessively long lines of text
  * by setting a max-width.
  */
-#page,
+.page,
 .region-bottom {
   margin-left: auto;
   margin-right: auto;
@@ -38,32 +38,32 @@ $zen-auto-include-item-base: false;
 }
 
 /* Apply the shared properties of grid items in a single, efficient ruleset. */
-#header,
-#content,
-#navigation,
+.header,
+.main-content,
+.main-navigation,
 .region-sidebar-first,
 .region-sidebar-second,
-#footer {
+.footer {
   // See the note about $zen-auto-include-item-base above.
   @include zen-grid-item-base();
 }
 
 /* Containers for grid items and flow items. */
-#header,
-#main,
-#footer {
+.header,
+.main,
+.footer {
   @include zen-grid-container();
 }
 
 /* Navigation bar */
 @media all and (min-width: 480px) {
-  #main {
-    /* Move all the children of #main down to make room. */
+  .main {
+    /* Move all the children of .main down to make room. */
     padding-top: $nav-height;
     position: relative;
   }
-  #navigation {
-    /* Move the navbar up inside #main's padding. */
+  .main-navigation {
+    /* Move the navbar up inside .main's padding. */
     position: absolute;
     top: 0;
     height: $nav-height;
@@ -85,7 +85,7 @@ $zen-auto-include-item-base: false;
    */
   .sidebar-first {
     /* Span 2 columns, starting in 2nd column from left. */
-    #content {
+    .main-content {
       @include zen-grid-item(2, 2);
     }
 
@@ -100,7 +100,7 @@ $zen-auto-include-item-base: false;
    */
   .sidebar-second {
     /* Span 2 columns, starting in 1st column from left. */
-    #content {
+    .main-content {
       @include zen-grid-item(2, 1);
     }
 
@@ -115,7 +115,7 @@ $zen-auto-include-item-base: false;
    */
   .two-sidebars {
     /* Span 2 columns, starting in 2nd column from left. */
-    #content {
+    .main-content {
       @include zen-grid-item(2, 2);
     }
 
@@ -163,7 +163,7 @@ $zen-auto-include-item-base: false;
    */
   .sidebar-first {
     /* Span 4 columns, starting in 2nd column from left. */
-    #content {
+    .main-content {
       @include zen-grid-item(4, 2);
     }
 
@@ -178,7 +178,7 @@ $zen-auto-include-item-base: false;
    */
   .sidebar-second {
     /* Span 4 columns, starting in 1st column from left. */
-    #content {
+    .main-content {
       @include zen-grid-item(4, 1);
     }
 
@@ -193,7 +193,7 @@ $zen-auto-include-item-base: false;
    */
   .two-sidebars {
     /* Span 3 columns, starting in 2nd column from left. */
-    #content {
+    .main-content {
       @include zen-grid-item(3, 2);
     }
 
