--- a/sass/_print.scss
+++ b/sass/_print.scss
@@ -22,7 +22,7 @@
     }
   }
 
-  #content {
+  .main-content {
     /* Add visible URL after links. */
     a[href]:after {
       content: " (" attr(href) ")";
@@ -43,7 +43,7 @@
   }
 
   /* Un-float the content. */
-  #content {
+  .main-content {
     float: none !important;
     width: 100% !important;
     margin: 0 !important;
@@ -52,9 +52,9 @@
 
   /* Turn off any background colors or images. */
   body,
-  #page,
-  #main,
-  #content {
+  .page,
+  .main,
+  .main-content {
     color: #000;
     background-color: transparent !important;
     background-image: none !important;
@@ -63,10 +63,10 @@
   /* Hide sidebars and nav elements. */
   #skip-link,
   #toolbar,
-  #navigation,
+  .main-navigation,
   .region-sidebar-first,
   .region-sidebar-second,
-  #footer,
+  .footer,
   .breadcrumb,
   .tabs,
   .action-links,
