--- a/sass/styles-rtl.scss
+++ b/sass/styles-rtl.scss
@@ -13,7 +13,19 @@
 @import "layouts/responsive-rtl";
 
 /* Component (SMACSS module) rules */
-@import "components/misc-rtl";
+@import "components/inline-rtl";
+
+@import "components/forms-drupal-rtl";
+@import "components/collapsible-fieldsets-rtl";
+@import "components/form-tables-rtl";
+
+@import "components/comments-rtl";
+@import "components/header-rtl";
+@import "components/messages-rtl";
+@import "components/more-link-rtl";
+@import "components/navbar-rtl";
+@import "components/side-menu-rtl";
+@import "components/tabs-rtl";
 
 /* SMACSS theme rules */
 /* @import "theme-A-rtl"; */
