--- a/sass/styles-bootstrap.scss
+++ b/sass/styles-bootstrap.scss
@@ -24,7 +24,7 @@
 @import "bootstrap/grid";
 @import "bootstrap/tables";
 @import "bootstrap/forms";
-@import "bootstrap/buttons";
+// @import "bootstrap/buttons"; --> Moved to components/button
 
 // Components
 @import "bootstrap/component-animations";
