--- a/sass/bootstrap/_code.scss
+++ b/sass/bootstrap/_code.scss
@@ -1,6 +1,13 @@
 //
 // Code (inline and blocK)
 // --------------------------------------------------
+$code-color:                  #c7254e !default;
+$code-bg:                     #f9f2f4 !default;
+
+$pre-bg:                      #f5f5f5 !default;
+$pre-color:                   #333 !default;
+$pre-border-color:            #ccc !default;
+$pre-scrollable-max-height:   340px !default;
 
 
 // Inline and block code styles
