--- a/sass/bootstrap/_wells.scss
+++ b/sass/bootstrap/_wells.scss
@@ -1,6 +1,8 @@
 //
 // Wells
 // --------------------------------------------------
+$well-bg:                     #f5f5f5 !default;
+
 
 
 // Base class
