--- a/sass/components/_breadcrumb.scss
+++ b/sass/components/_breadcrumb.scss
@@ -16,3 +16,29 @@
     padding: 0;
   }
 }
+
+
+// Breadcrumbs
+// -------------------------
+$breadcrumb-bg:               #f5f5f5 !default;
+$breadcrumb-color:            #ccc !default;
+$breadcrumb-active-color:     $gray-light !default;
+
+.breadcrumb {
+  padding: 8px 15px;
+  margin-bottom: $line-height-computed;
+  list-style: none;
+  background-color: $breadcrumb-bg;
+  @include border-radius($border-radius-base);
+  li {
+    display: inline-block;
+    &+li:before {
+      content: "/\00a0"; // Unicode space added since inline-block means non-collapsing white-space
+      padding: 0 5px;
+      color: $breadcrumb-color;
+    }
+  }
+  .active {
+    color: $breadcrumb-active-color;
+  }
+}
