--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -3,7 +3,257 @@
  * Buttons.
  */
 
+//
+// Buttons
+// --------------------------------------------------
+
+$btn-font-weight:                normal !default;
+
+$btn-default-color:              #333 !default;
+$btn-default-bg:                 #fff !default;
+$btn-default-border:             #ccc !default;
+
+$btn-primary-color:              #fff !default;
+$btn-primary-bg:                 #428bca !default;
+$btn-primary-border:             darken(#428bca, 5%) !default;
+
+$btn-success-color:              #fff !default;
+$btn-success-bg:                 #5cb85c !default;
+$btn-success-border:             darken(#5cb85c, 5%) !default;
+
+$btn-warning-color:              #fff !default;
+$btn-warning-bg:                 #f0ad4e !default;
+$btn-warning-border:             darken(#f0ad4e, 5%) !default;
+
+$btn-danger-color:               #fff !default;
+$btn-danger-bg:                  #d9534f !default;
+$btn-danger-border:              darken(#d9534f, 5%) !default;
+
+$btn-info-color:                 #fff !default;
+$btn-info-bg:                    #5bc0de !default;
+$btn-info-border:                darken(#5bc0de, 5%) !default;
+
+$btn-link-disabled-color:        #999 !default;
+
+// Button variants
+// -------------------------
+// Easily pump out default styles, as well as :hover, :focus, :active,
+// and disabled options for all buttons
+@mixin button-variant($color, $background, $border) {
+  color: $color;
+  background-color: $background;
+  border-color: $border;
+
+  &:hover,
+  &:focus,
+  &:active,
+  &.active,
+  .open .dropdown-toggle & {
+    color: $color;
+    background-color: darken($background, 8%);
+        border-color: darken($border, 12%);
+  }
+  &:active,
+  &.active,
+  .open .dropdown-toggle & {
+    background-image: none;
+  }
+  &.disabled,
+  &[disabled],
+  fieldset[disabled] & {
+    &,
+    &:hover,
+    &:focus,
+    &:active,
+    &.active {
+      background-color: $background;
+          border-color: $border
+    }
+  }
+}
+
+// Button sizes
+// -------------------------
+@mixin button-size($padding-vertical, $padding-horizontal, $font-size, $line-height, $border-radius) {
+  padding: $padding-vertical $padding-horizontal;
+  font-size: $font-size;
+  line-height: $line-height;
+  @include border-radius($border-radius);
+}
+
+// Base styles
+// --------------------------------------------------
+
+// Core styles
+@mixin btn() {
+  display: inline-block;
+  padding: $padding-base-vertical $padding-base-horizontal;
+  margin-bottom: 0; // For input.btn
+  font-size: $font-size-base;
+  font-weight: $btn-font-weight;
+  line-height: $line-height-base;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 1px solid transparent;
+  @include border-radius($border-radius-base);
+  white-space: nowrap;
+  @include user-select(none);
+
+  &:focus {
+    @include tab-focus();
+  }
+
+  &:hover,
+  &:focus {
+    color: $btn-default-color;
+    text-decoration: none;
+  }
+
+  &:active,
+  &.active {
+    outline: 0;
+    background-image: none;
+    @include box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
+  }
+
+  &.disabled,
+  &[disabled],
+  fieldset[disabled] & {
+    cursor: not-allowed;
+    pointer-events: none; // Future-proof disabling of clicks
+    @include opacity(.65);
+    @include box-shadow(none);
+  }
+}
+
+
+// Alternate buttons
+// --------------------------------------------------
+
+%btn-default {
+	@include btn();
+  @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
+}
+%btn-primary {
+	@include btn();
+  @include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
+}
+// Warning appears as orange
+%btn-warning {
+	@include btn;
+  @include button-variant($btn-warning-color, $btn-warning-bg, $btn-warning-border);
+}
+// Danger and error appear as red
+%btn-danger {
+	@include btn;
+  @include button-variant($btn-danger-color, $btn-danger-bg, $btn-danger-border);
+}
+// Success appears as green
+%btn-success {
+  @include button-variant($btn-success-color, $btn-success-bg, $btn-success-border);
+}
+// Info appears as blue-green
+%btn-info {
+	@include btn;
+  @include button-variant($btn-info-color, $btn-info-bg, $btn-info-border);
+}
+
+
+// Link buttons
+// -------------------------
+
+// Make a button look and behave like a link
+@mixin btn-link {
+  color: $link-color;
+  font-weight: normal;
+  cursor: pointer;
+  @include border-radius(0);
+
+  &,
+  &:active,
+  &[disabled],
+  fieldset[disabled] & {
+    background-color: transparent;
+    @include box-shadow(none);
+  }
+  &,
+  &:hover,
+  &:focus,
+  &:active {
+    border-color: transparent;
+  }
+  &:hover,
+  &:focus {
+    color: $link-hover-color;
+    text-decoration: underline;
+    background-color: transparent;
+  }
+  &[disabled],
+  fieldset[disabled] & {
+    &:hover,
+    &:focus {
+      color: $btn-link-disabled-color;
+      text-decoration: none;
+    }
+  }
+}
+
+
+// Button Sizes
+// --------------------------------------------------
+
+@mixin btn-lg {
+  // line-height: ensure even-numbered height of button next to large input
+  @include button-size($padding-large-vertical, $padding-large-horizontal, $font-size-large, $line-height-large, $border-radius-large);
+}
+.btn-lg { @include btn-lg; }
+@mixin btn-sm {
+  // line-height: ensure proper height of button next to small input
+  @include button-size($padding-small-vertical, $padding-small-horizontal, $font-size-small, $line-height-small, $border-radius-small);
+}
+.btn-sm { @include btn-sm; }
+
+@mixin btn-xs {
+  padding: 1px 5px;
+}
+.btn-xs { @include btn-sm; @include btn-xs; }
+
+
+// Block button
+// --------------------------------------------------
+
+@mixin btn-block {
+  display: block;
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+// Vertically space out multiple block buttons
+.btn-block + .btn-block {
+  margin-top: 5px;
+}
+
+// Specificity overrides
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+  &.btn-block {
+    width: 100%;
+  }
+}
+
 /* Buttons used by contrib modules like Media. */
 a.button {
-  @include appearance(button);
+//  @include appearance(button);
+  @extend %btn-default;
 }
+
+button,
+html input[type="button"], /* 1 */
+input[type="reset"],
+input[type="submit"] {
+  @extend %btn-default;
+}
+
